--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "lets-fly-landing",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Landing page project Let's Fly built with Vite and SCSS",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/albert-alanreys/lets-fly-landing.git"
+  },
+  "keywords": [
+    "letsfly",
+    "landing",
+    "frontend",
+    "html",
+    "scss",
+    "vite"
+  ],
+  "author": "Albert Alan-Reys",
   "devDependencies": {
     "sass": "^1.93.2",
     "vite": "^7.1.7"
